Finalizing the Orchard Update